# QtTemplate

./: CMakeLists.txt  README.md
include/: filehandler.h  hermitecurve.h  loginhandler.h  mainwindow.h  readyaml.h  rosbridgeclient.h  roshandling.h  virtualwall.h
include/websocket/: posesubscribeclient.h  publishclient.h  stringsubscribeclient.h  subscribeclient.h  viewmodel.h
qml/: CustomButton.qml  Dashboard.qml  Login.qml  Main.qml
src/: filehandler.cpp  hermitecurve.cpp  loginhandler.cpp  main.cpp  mainwindow.cpp  readyaml.cpp  rosbridgeclient.cpp  roshandling.cpp  virtualwall.cpp
src/websocket/: posesubscribeclient.cpp  publishclient.cpp  stringsubscribeclient.cpp  subscribeclient.cpp  viewmodel.cpp
